# kb-rag

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml.example  pyproject.toml
docs/: bugs.md  onboarding-beginner.md  onboarding.md
src/knowledge_base/: __init__.py  cli.py  config.py  exceptions.py  logger.py  obsidian.py  progress.py  utils.py
src/knowledge_base/importers/: __init__.py  base.py  batch.py  classifier.py  docx_importer.py  epub_importer.py  html_importer.py  markdown_writer.py  mineru_importer.py  pymupdf_importer.py  router.py  txt_importer.py
src/knowledge_base/knowledge_graph/: __init__.py  bm25_index.py  engine.py  lightrag_engine.py  query_cache.py
src/knowledge_base/mcp_server/: __init__.py  server.py
src/knowledge_base/ui/: __init__.py  app.py
tests/scripts/: verify_llm.py
